--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
-/tests export-ignore
-/.formatter.yml export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
+/.php_cs export-ignore
+/.scrutinizer.yml export-ignore
+/.styleci.yml export-ignore
 /.travis.yml export-ignore
-/phpunit.xml export-ignore
+/phpunit.xml.dist export-ignore
+/tests export-ignore
