--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,18 @@
     ],
     "require": {
         "php": "^5.5|^7.0",
-        "league/commonmark": "^0.11|^0.12|^0.13",
-        "twig/twig": "^1.12|^2.0"
+        "league/commonmark": "^0.11|^0.12|^0.13|^0.14",
+        "twig/twig": "^1.17|^2.0@dev"
     },
     "require-dev": {
-        "league/commonmark": "@dev",
+        "league/commonmark": "^0.13.2|^0.14",
         "webuni/commonmark-attributes-extension": "dev-master",
         "jgm/CommonMark": "0.25",
         "symfony/finder": "^2.8|^3.0",
         "symfony/var-dumper": "^2.8|^3.0",
         "phpunit/phpunit": "^4.0|^5.0",
-        "fabpot/php-cs-fixer": "^1.9"
+        "friendsofphp/php-cs-fixer": "^1.9",
+        "sllh/php-cs-fixer-styleci-bridge": "^2.0"
     },
     "repositories": [
         {
@@ -42,9 +43,6 @@
             }
         }
     ],
-    "config": {
-        "secure-http": false
-    },
     "autoload": {
         "psr-4": {
             "Webuni\\CommonMark\\TwigRenderer\\": "src"
