--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,4 +16,10 @@
             <directory>./tests/</directory>
         </testsuite>
     </testsuites>
+
+    <filter>
+        <whitelist>
+            <directory suffix=".php">src</directory>
+        </whitelist>
+    </filter>
 </phpunit>
