--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,10 @@
     ],
     "require": {
         "php": "^5.5|^7.0",
-        "league/commonmark": "^0.11|^0.12|^0.13|^0.14",
+        "league/commonmark": "^0.13.2|^0.14",
         "twig/twig": "^1.17|^2.0@dev"
     },
     "require-dev": {
-        "league/commonmark": "^0.13.2|^0.14",
         "webuni/commonmark-attributes-extension": "dev-master",
         "jgm/CommonMark": "0.25",
         "symfony/finder": "^2.8|^3.0",
@@ -43,6 +42,9 @@
             }
         }
     ],
+    "config": {
+        "secure-http": false
+    },
     "autoload": {
         "psr-4": {
             "Webuni\\CommonMark\\TwigRenderer\\": "src"
