Fix travis configuration for tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ matrix:
 
 before_script:
   - composer self-update
-  - composer update --prefer-dist --no-interaction $COMPOSER_FLAGS
+  - composer update --prefer-source --no-interaction $COMPOSER_FLAGS
 
 script:
   - vendor/bin/phpunit $PHPUNIT_COVERAGE
