--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_script:
   - if [[ $TRAVIS_PHP_VERSION = '5.5' ]]; then COMPOSER_FLAGS="--prefer-lowest"; else COMPOSER_FLAGS=""; fi
   - composer self-update
   - if [ "$COMMONMARK_VERSION" != "" ]; then composer require "league/commonmark:${COMMONMARK_VERSION}" --no-update; fi;
-  - composer update --prefer-dist --no-interaction $COMPOSER_FLAGS
+  - composer update --prefer-source --no-interaction $COMPOSER_FLAGS
 
 script:
   - vendor/bin/phpunit $PHPUNIT_COVERAGE
