--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,6 @@
-/.gitattributes export-ignore
-/.gitignore export-ignore
-/.php_cs export-ignore
-/.scrutinizer.yml export-ignore
-/.styleci.yml export-ignore
-/.travis.yml export-ignore
-/phpunit.xml.dist export-ignore
+/.* export-ignore
+/run export-ignore
 /tests export-ignore
+/phpstan.neon.dist export-ignore
+/phpunit.xml.dist export-ignore
+/psalm.xml.dist export-ignore
