--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
-/composer.lock
-/phpunit.xml
-/vendor/
+.phpunit.result.cache
+.runner
+composer.lock
+phpstan.neon
+phpunit.xml
+psalm.xml
+vendor/
