--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,22 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <phpunit backupGlobals="false"
-         backupStaticAttributes="false"
          colors="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
-         processIsolation="false"
-         stopOnFailure="false"
-         syntaxCheck="false"
          bootstrap="vendor/autoload.php"
-        >
+>
     <testsuites>
-        <testsuite name="Commonmark Twig Renderer Test Suite">
-            <directory>./tests/</directory>
+        <testsuite name="Webuni Front matter Test Suite">
+            <directory suffix="Test.php">./tests/</directory>
         </testsuite>
     </testsuites>
-
     <filter>
         <whitelist>
             <directory suffix=".php">src</directory>
