--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,8 @@
         "commonmark/commonmark.js": "0.29.2",
         "github/gfm": "0.29.0",
         "league/commonmark": "^1.0@dev",
+        "moxio/commonmark-ext-definition-list": "^1.0",
+        "ows/commonmark-sup-sub-extensions": "^2.0",
         "symfony/finder": "^5.0"
     },
     "config": {
